# kmp-aio

./: .gitignore  AGENTS.md  LIB_MIGRATION_PLAN.md  PACKAGING.md  README.md  build.gradle.kts  design-system.md  gradle.properties  settings.gradle.kts  xiaoeyu.config.json
.codex/hooks/: kcloud_session_start.py  kcloud_stop_dev_loop.py
.github/workflows/: build-and-release.yml  deploy-docs.yml  deploy-kcloud-pages.yml
apps/: README.md
apps/coding-playground/: README.md  build.gradle.kts
apps/cupertino-demo/: README.md  build.gradle.kts
apps/fluent-demo/: README.md  build.gradle.kts
apps/kbox/: build.gradle.kts
apps/kcloud/: PLUGIN_DEVELOPMENT.md  README.md  build.gradle.kts  config-center.sqlite
apps/kcloud/native/windows/KCloudShellExt/: CMakeLists.txt  KCloudShellExt.cpp  KCloudShellExt.def  KCloudShellExt.h
apps/kcloud/native/windows/MoveOffShellExt/: CMakeLists.txt  MoveOffShellExt.cpp  MoveOffShellExt.h
apps/kcp-i18n-demo/: build.gradle.kts
apps/liquiddemo/: README.md  build.gradle.kts
apps/moveoff/: README.md  build.gradle.kts
apps/notes/: .env  .env.dev  .env.prod  README.md  build.gradle.kts
apps/remotecompose/: README.md  build.gradle.kts
apps/shadcntest/: build.gradle.kts
apps/template/: build.gradle.kts
apps/vibepocket/: .gitignore  build.gradle.kts  vibepocket-dev.db  vibepocket.db
apps/vibepocket-example/: build.gradle.kts
checkouts/gradle/: libs.versions.toml
gradle/: spring2ktor-ksp-cache-workaround.gradle.kts
server/: .env.example  build.gradle.kts  docker-compose.yml
xiaoeyu/: README.md  action.yml  package.json
(+2821 files in other folders)
